# acorn_robot

acorn_bringup/: CMakeLists.txt  package.xml
acorn_bringup/launch/: acorn_bringup.launch  ekf.launch  freespace.launch  sick_tim.launch  web_cam.launch
acorn_description/: CMakeLists.txt  package.xml
acorn_description/launch/: acorn_rviz.launch  example.launch  upload_acorn.launch
acorn_description/meshes/: left_wheel_s.stl
acorn_description/urdf/: acorn.urdf.xacro
acorn_gazebo/: CMakeLists.txt  package.xml
acorn_gazebo/launch/: acorn_avz.launch  acorn_maize_1.launch  acorn_maize_2.launch  acorn_maize_3.launch  acorn_maize_4.launch  gmapping.launch  spawn_acorn.launch
acorn_gazebo/urdf/maize/: maizefield_simple_FRE18.urdf.xacro  maizefield_simple_var_FRE18.urdf.xacro  maizefield_simple_wave_FRE18.urdf.xacro
acorn_navigation/: CMakeLists.txt  package.xml
acorn_robot/: CMakeLists.txt  package.xml
draco/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
draco/devel/lib/draco-ros/: Test  decoder  encoder
draco/devel/lib/pkgconfig/: draco-ros.pc
draco/devel/share/draco-ros/cmake/: draco-rosConfig.cmake
draco/src/draco-ros/: CMakeLists.txt  package.xml
draco/src/draco-ros/src/: decoder.cpp  encoder.cpp  test.cpp
draco/src/draco-ros/tmp/: hase.drc
low_bringup/: CMakeLists.txt  package.xml
low_bringup/config/: backpack_2d.lua
low_bringup/launch/: cartographer.launch  freespace.launch  low_bringup.launch  motor_driver.launch  sick_tim.launch  velodyne.launch
low_camera/: CMakeLists.txt  package.xml
low_camera/urdf/: _d435.urdf.xacro
low_description/: CMakeLists.txt  package.xml
low_description/launch/: example.launch  low_rviz.launch  upload_low.launch
low_description/meshes/: left_wheel.stl  right_wheel.stl  right_wheel_s.stl
low_description/urdf/: .low.urdf.xacro.swp  low.urdf.xacro
low_gazebo/: CMakeLists.txt  common.xacro  package.xml
low_gazebo/launch/: .low_maize_3.launch.swp  hector_slam.launch  low.launch  low_avz.launch  low_maize_1.launch  low_maize_2.launch  low_maize_3.launch  low_maize_4.launch  spawn_low.launch
low_gazebo/models/maizeplants/: Artificial_Maizefield_Simple_FRE18_HD.dae  Artificial_Maizefield_Simple_Wave_FRE18_HD.dae
low_gazebo/urdf/maize/: maizefield_simple_FRE18.urdf.xacro  maizefield_simple_curved_FRE18.urdf.xacro  maizefield_simple_var_FRE18.urdf.xacro  maizefield_simple_wave_FRE18.urdf.xacro
low_navigation/: CMakeLists.txt  package.xml
low_robot/: CMakeLists.txt  package.xml
sharing_point_velodyne/: mapOptmization.cpp
