<?xml version="1.0"?>
<package format="2">
  <name>acorn_bringup</name>
  <version>0.0.0</version>
  <description>The acorn_bringup package</description>

  <maintainer email="amock@todo.todo">amock</maintainer>

  <license>TODO</license>

  <url type="website">http://wiki.ros.org/acorn_bringup</url>

  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
