<?xml version="1.0"?>
<package format="2">
  <name>acorn_robot</name>
  <version>0.0.1</version>
  <description>The acorn_robot package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>TODO</license>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>acorn_description</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
